--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,4 @@ trim_trailing_whitespace = true
 [*.{kt,kts}]
 ktlint_code_style = intellij_idea
 ktlint_standard_blank-line-before-declaration = enabled
+ktlint_class_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 1
