--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,25 @@
 name: Build
 on:
-  push:
-  pull_request:
+    push:
+    pull_request:
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
+    build:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+        steps:
+            -   uses: actions/checkout@v4
+            -   name: Set up JDK 21
+                uses: actions/setup-java@v4
+                with:
+                    java-version: '21'
+                    distribution: 'temurin'
+            -   name: Setup Gradle
+                uses: gradle/gradle-build-action@v2
+            -   name: Setup Vulkan CLI Tools
+                run: |
+                    sudo apt-get update
+                    sudo apt-get install -y glslc
+                    glslc --version
+            -   name: Build with Gradle Wrapper
+                run: ./gradlew build
